--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,10 +12,10 @@
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.10",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.arfoundation": "2.1.4",
-    "com.unity.xr.arsubsystems": "2.1.1",
-    "com.unity.xr.management": "3.0.5",
-    "com.unity.xr.windowsmr": "2.0.3",
+    "com.unity.xr.arfoundation": "3.1.0-preview.4",
+    "com.unity.xr.management": "3.1.0-preview.2",
+    "com.unity.xr.windowsmr": "3.0.1-preview.3",
+    "com.unity.xr.legacyinputhelpers": "2.0.6",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
